修改README的样式

--- a/project/operations_with_images/code/cpp/CMakeLists.txt
+++ b/project/operations_with_images/code/cpp/CMakeLists.txt
@@ -10,6 +10,12 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)
 # 寻找 OpenCV 4，OpenCVConfig.cmake 所在目录的绝对路径
 find_package(OpenCV 4 REQUIRED)
 
+message(STATUS "OpenCV library status:")
+message(STATUS "    config: ${OpenCV_DIR}")
+message(STATUS "    version: ${OpenCV_VERSION}")
+message(STATUS "    libraries: ${OpenCV_LIBS}")
+message(STATUS "    include path: ${OpenCV_INCLUDE_DIRS}")
+
 add_executable(${PROJECT_NAME} src/main.cpp)
 
 target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS})
